Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9960

Rolling downgrade master to 2.10 - unable to import zpools

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.10.1, Lustre 2.11.0
    • Lustre 2.10.0, Lustre 2.10.1, Lustre 2.11.0
    • None
    • master, 3631 zfs 0.7.1
      2.10, build 5 zfs 0.6.5.9
      ZFS
    • 3
    • 9223372036854775807

      While performing Rolling downgrade testing for bfs from master to 2.10, I am unable to import the zpool.

      [root@onyx-78 ~]# zpool import lustre-mdt1
      [  939.565075] SPL: using hostid 0x61303230
      This pool uses the following feature(s) not supported by this system:
      	org.zfsonlinux:userobj_accounting (User/Group object accounting.)
      All unsupported features are only required for writing to the pool.
      The pool can be imported using '-o readonly=on'.
      cannot import 'lustre-mdt1': unsupported version or feature
      

      Steps Followed:

      1. Started with all clients and servers with 2.10 build 5 and build the Lustre File system
      2. Upgraded OSS to master re-mounted and ran sanity.sh
      3. Upgraded MDS to master , remounted and ran sanity.sh
      4. Upgraded Clients to master, remounted and ran sanity.sh
      5. Downgraded Clients to 2.10. remounted and ran sanity.sh
      6. Downgraded MDS to 2.10, while importing zpools the above message appears and I am unable to import zpools.

            utopiabound Nathaniel Clark
            standan Saurabh Tandan (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: